package grpc.experiments.client;

public class TestDTO {

    private String field1;

    private String field2;

    private String field3;

    private Integer field4;

    private Long field5;

    private Float field6;

    private Double field7;

    private Boolean field8;

    public String getField1() {
        return field1;
    }

    public Boolean getField8() {
        return field8;
    }

    public void setField8(Boolean field8) {
        this.field8 = field8;
    }

    public Double getField7() {
        return field7;
    }

    public void setField7(Double field7) {
        this.field7 = field7;
    }

    public Float getField6() {
        return field6;
    }

    public void setField6(Float field6) {
        this.field6 = field6;
    }

    public Long getField5() {
        return field5;
    }

    public void setField5(Long field5) {
        this.field5 = field5;
    }

    public Integer getField4() {
        return field4;
    }

    public void setField4(Integer field4) {
        this.field4 = field4;
    }

    public String getField3() {
        return field3;
    }

    public void setField3(String field3) {
        this.field3 = field3;
    }

    public String getField2() {
        return field2;
    }

    public void setField2(String field2) {
        this.field2 = field2;
    }

    public void setField1(String field1) {
        this.field1 = field1;
    }
    
}
